--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                         </div>
                     </div>
 
+                    <div class="last-update" id="last-update">Last updated: Loading...</div>
+                    
                     <div class="chart-section">
                         <h3>Network Status</h3>
                         <div class="chart-container">
